<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_constraintDimensionRatio="1:2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.camera.view.PreviewView
        android:id="@+id/pv_preview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="2dp"
        />

    <!-- An empty mask for debugging purposes only-->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/pv_preview"
        app:layout_constraintRight_toRightOf="@id/pv_preview"
        app:layout_constraintBottom_toBottomOf="@id/pv_preview"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="#FFFFFF"
        android:alpha="0.2"
        android:elevation="2dp"
        android:visibility="invisible"
        />

    <!-- Stuff that are on top of the screen -->
    <View
        android:id="@+id/v_guide_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/pv_preview"
        app:layout_constraintRight_toRightOf="@id/pv_preview"
        app:layout_constraintBottom_toBottomOf="@id/pv_preview"
        app:layout_constraintTop_toTopOf="@id/pv_preview"
        android:foreground="@drawable/ic_crop_mark"
        android:elevation="2dp"/>

    <View
        android:id="@+id/v_focus_mark"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="@id/pv_preview"
        app:layout_constraintTop_toTopOf="@id/pv_preview"
        android:foreground="@drawable/focus_circle"
        android:visibility="invisible"
        android:elevation="3dp"
        />

    <TextView
        style="@style/ViewFinderHint"
        android:id="@+id/hint_zoom"
        android:text="@string/hint_zoom"
        app:layout_constraintTop_toTopOf="@id/pv_preview"
        app:layout_constraintLeft_toLeftOf="@id/pv_preview"
        />

    <TextView
        style="@style/ViewFinderData"
        android:id="@+id/data_zoom"
        android:text="35mm"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="@id/hint_zoom"
        app:layout_constraintTop_toBottomOf="@+id/hint_zoom"
        />

    <TextView
        style="@style/ViewFinderHint"
        android:id="@+id/hint_af_mode"
        android:text="@string/hint_af_mode"
        app:layout_constraintTop_toTopOf="@id/pv_preview"
        app:layout_constraintLeft_toRightOf="@id/hint_zoom"
        />

    <TextView
        style="@style/ViewFinderData"
        android:id="@+id/data_af_mode"
        android:text="@string/data_af_mode_one_shot"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="@id/hint_af_mode"
        app:layout_constraintTop_toBottomOf="@id/hint_af_mode"
        />

    <TextView
        style="@style/ViewFinderHint"
        android:id="@+id/hint_fps"
        android:text="@string/hint_fps"
        app:layout_constraintTop_toTopOf="@id/pv_preview"
        app:layout_constraintLeft_toRightOf="@id/hint_af_mode"
        />

    <TextView
        style="@style/ViewFinderData"
        android:id="@+id/data_fps"
        android:text="50"
        app:layout_constraintTop_toBottomOf="@id/hint_fps"
        app:layout_constraintLeft_toLeftOf="@id/hint_fps"
        />

    <TextView
        style="@style/ViewFinderHint"
        android:id="@+id/hint_wb"
        android:text="@string/hint_wb"
        app:layout_constraintTop_toTopOf="@id/pv_preview"
        app:layout_constraintRight_toRightOf="@id/pv_preview"
        />

    <TextView
        style="@style/ViewFinderData"
        android:id="@+id/data_wb"
        android:text="@string/data_wb_auto"
        app:layout_constraintLeft_toLeftOf="@id/hint_wb"
        app:layout_constraintTop_toBottomOf="@id/hint_wb"
        />

    <TextView
        style="@style/ViewFinderHint"
        android:id="@+id/hint_ae_lock"
        android:text="@string/hint_ae_lock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/hint_wb"/>

    <TextView
        style="@style/ViewFinderData"
        android:id="@+id/btn_ae_lock"
        android:text="@string/data_ae_lock_off"
        app:layout_constraintTop_toBottomOf="@id/hint_ae_lock"
        app:layout_constraintLeft_toLeftOf="@id/hint_ae_lock"
        />

    <TextView
        android:id="@+id/tv_record_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/hint_fps"
        app:layout_constraintRight_toLeftOf="@id/hint_ae_lock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/data_zoom"
        android:autoSizeTextType="uniform"
        android:text="00:00:00:00"
        android:fontFamily="monospace"
        android:gravity="top|center_horizontal"
        android:elevation="3dp"
        />

    <!-- Stuff that are at the bottom of the screen -->
    <TextView
        android:id="@+id/data_recording_text"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:paddingVertical="10dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:text="@string/data_recording_idle"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/pv_preview"
        app:layout_constraintRight_toRightOf="@id/pv_preview"
        android:gravity="center_vertical|start"
        />

    <ImageView
        android:id="@+id/data_recording_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toLeftOf="@id/data_recording_text"
        app:layout_constraintTop_toTopOf="@id/data_recording_text"
        app:layout_constraintBottom_toBottomOf="@id/data_recording_text"
        android:src="@drawable/record_sphere"
        app:tint="#80FFFFFF"
        android:layout_marginEnd="5dp"
        android:layout_marginVertical="15dp"
        android:elevation="3dp"
        />

    <View
        android:id="@+id/v_settings"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:foreground="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@id/pv_preview"
        app:layout_constraintLeft_toLeftOf="@id/pv_preview"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:elevation="3dp"
        />

    <androidx.cardview.widget.CardView
        style="@style/BottomCard"
        android:id="@+id/card_guide"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@id/v_settings"
        app:layout_constraintLeft_toRightOf="@id/v_settings"
        app:cardBackgroundColor="@color/card_active"
        >

        <TextView
            style="@style/BottomText"
            android:text="@string/hint_guide_overlay"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        style="@style/BottomCard"
        android:id="@+id/card_info"
        app:layout_constraintBottom_toBottomOf="@id/v_settings"
        app:layout_constraintLeft_toRightOf="@id/card_guide"
        android:layout_marginLeft="10dp"
        app:cardBackgroundColor="@color/card_inactive"
        >

        <TextView
            style="@style/BottomText"
            android:text="@string/hint_info"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/BottomCard"
        android:id="@+id/card_ev"
        app:layout_constraintBottom_toBottomOf="@id/v_settings"
        app:layout_constraintLeft_toRightOf="@id/card_info"
        android:layout_marginLeft="10dp"
        app:cardBackgroundColor="@color/card_inactive"
        >

        <TextView
            android:id="@+id/tv_ev_text"
            style="@style/BottomText"
            android:text="@string/hint_ev"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_ev"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="@id/pv_preview"
        app:layout_constraintRight_toRightOf="@id/pv_preview"
        app:layout_constraintBottom_toBottomOf="@id/pv_preview"
        android:layout_marginBottom="52dp"
        android:elevation="3dp"
        android:layout_marginHorizontal="20dp"
        android:valueFrom="-3"
        android:valueTo="3"
        android:value="0"
        app:trackColorActive="@color/card_active"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>