<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".SensorInfoFragment">

    <TextView
        style="@style/InfoHint"
        android:text="@string/hint_roll"
        android:id="@+id/hint_roll"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        style="@style/InfoHint"
        android:text="@string/hint_yaw"
        android:id="@+id/hint_yaw"
        app:layout_constraintRight_toRightOf="@id/hint_roll"
        app:layout_constraintTop_toBottomOf="@id/hint_roll"/>

    <TextView
        style="@style/InfoHint"
        android:id="@+id/hint_pitch"
        android:text="@string/hint_pitch"
        app:layout_constraintRight_toRightOf="@id/hint_roll"
        app:layout_constraintTop_toBottomOf="@id/hint_yaw"/>

    <TextView
        style="@style/InfoData"
        android:id="@+id/data_roll"
        android:text="@string/data_tilt_perfect"
        app:layout_constraintLeft_toRightOf="@id/hint_roll"
        app:layout_constraintTop_toTopOf="@id/hint_roll"/>

    <TextView
        style="@style/InfoData"
        android:id="@+id/data_yaw"
        android:text="@string/data_tilt_perfect"
        app:layout_constraintLeft_toRightOf="@id/hint_yaw"
        app:layout_constraintTop_toTopOf="@id/hint_yaw"/>

    <TextView
        style="@style/InfoData"
        android:id="@+id/data_pitch"
        android:text="@string/data_tilt_perfect"
        app:layout_constraintLeft_toRightOf="@id/hint_pitch"
        app:layout_constraintTop_toTopOf="@id/hint_pitch"/>

</androidx.constraintlayout.widget.ConstraintLayout>